<resources>
    <string name="app_name">ScavengerHunt</string>
    <string name="inference_image_desc">This is where the test image will go</string>
    <string name="category_label_desc">Deep learning category label</string>
    <string name="latency_text_desc">How long it takes to generate a category label</string>
    <string name="toggle_text_off">Off-device</string>
    <string name="toggle_text_on">On-device</string>
    <string name="change_picture_desc">Changes ImageView to random picture from assets</string>
    <string name="check_image_text">&#x1F171;heck image</string>
    <string name="press_change_pic">Press the Change Picture button to get started!</string>
    <string name="check_correct">Press &#x1F171;heck image to see if you got the right picture!</string>
    <string name="running">Running inference in background thread…</string>
    <string name="calculating">Calculating…</string>
    <string name="target_image_label">Press Get New Target Image to get started!</string>
    <string name="target_image_label_desc">Displays the target deep inference category for the user to take a picture of</string>
    <string name="capture_image_text">&#x1F4F7; Take picture!</string>
    <string name="get_new_target_text">Get new target image</string>
    <string name="hunt_history_desc">Lists the previous scavenger hunts</string>
    <string name="refresh">Refresh History</string>
    <string name="scavenger_hunt_history_label">Scavenger hunt history</string>
    <string name="start_hunt_text">Click here to start a scavenger hunt!</string>
    <string name="start_hunt_desc">onClick, prompts for username and switches to hunting activity</string>
    <string name="username">Enter your user name here.</string>
    <string name="failed">The picture doesn\'t seem to contain the target</string>
    <string name="current_target">Your current target is %1$s</string>
    <string name="take_pic_with_target">Take a picture containing the target</string>
    <string name="target_found">We found the target in your picture (%1$s)</string>
    <string name="target_not_found">The picture doesn\'t seem to contain the target</string>
    <string name="time_up">Time\'s up!</string>
</resources>
