<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/hunt_history_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scavenger_hunt_history_label"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hunt_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hunt_history_desc"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/refresh_history_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRefreshHistory"
                android:text="@string/refresh" />

            <Button
                android:id="@+id/start_hunt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickStartButton"
                android:contentDescription="@string/start_hunt_desc"
                android:text="@string/start_hunt_text" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
